deployments/kubernetes/k8s-replicaSet.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: happy-birthday
    tier: happy-birthday
  name: happy-birthday
  namespace: default
spec:
  ports:
  - nodePort: 30000
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    tier: happy-birthday
  type: NodePort
status:
  loadBalancer: {}
