deployments/kubernetes/k8s-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: kubia.com
    http:
      paths:
      - path: /
        backend:
          serviceName: happy-birthday
          servicePort: 30000
